crates/stems-cli/tests/snapshots/help__stems_mcp.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Run the MCP server (agent interface).

Serves the workspace's daemon to an MCP client (Claude Code, Cursor, ...) over stdio (default) or
local HTTP: tools, custom scripts as `<stem>__<script>` tools, resources and prompts. See
docs/mcp.md.

Usage: stems mcp [OPTIONS]

Options:
      --transport <TRANSPORT>
          Transport

          Possible values:
          - stdio: MCP over stdin/stdout
          - http:  MCP over local HTTP/SSE
          
          [default: stdio]

      --port <PORT>
          Port for --transport http (binds 127.0.0.1 only) [default: 7070]

      --auto-start
          Start the daemon if it is not running; when the client disconnects, stop it again if this
          server started it and no stem is running

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
