crates/stems-cli/tests/snapshots/help__stems_metrics.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Show CPU, memory and disk usage per stem.

The table has STEM CPU% MEM CHILDREN UPTIME RESTARTS and CPU/MEM sparklines over the last 30
samples, plus a TOTAL row. CPU% is percent of one core (can exceed 100); MEM is resident memory of
the whole process tree (containers: usage minus cache). `--sort cpu|mem` puts the heaviest first
("what is eating my laptop"); `--history 5m` adds the samples of that window to --json; `--disk`
also measures build outputs (target, dist, build, node_modules, .venv) and docker volumes (slow,
cached 60 s). --json gives `{interval_ms, stems: [{name, type, state, latest: {ts, cpu_pct,
rss_bytes, children, uptime_s, restarts}, history?, open_ports, limits, disk?}], totals: {cpu_pct,
rss_bytes, children}}`. See docs/metrics.md.

Usage: stems metrics [OPTIONS] [STEMS]...

Arguments:
  [STEMS]...
          Only these stems

Options:
      --watch [<INTERVAL>]
          Redraw until Ctrl-C, every INTERVAL (seconds or a duration such as `500ms`; default 2s)

      --history <DURATION>
          Include samples from this window (e.g. 5m)

      --sort <SORT>
          Sort order

          Possible values:
          - cpu: By CPU usage
          - mem: By memory usage

      --disk
          Also compute disk usage (slow)

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
